fixed close modal position on mobile

--- a/components/layout/videoModal/styles.scss
+++ b/components/layout/videoModal/styles.scss
@@ -32,13 +32,14 @@
       height: 100vh;
       min-width: 320px;
       button {
-        display: block;
+        display: flex;
         position: absolute;
-        right: 20px;
-        top: 10px;
+        right: 5px;
+        top: 5px;
+        padding: 0;
         background: transparent;
         border: transparent;
-        font-size: 46px;
+        font-size: 42px;
         color: white;
         &:focus {
           outline: transparent;
